<resources>
    <string name="app_name">Road -X</string>
    <string name="title_activity_maps">Road -X</string>
    <string name="title_activity_home__page">Road -X</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lakshya Sharma</string>
    <string name="nav_header_subtitle">sharma.lakshya@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email1">Email</string>
    <string name="Password">Password</string>
    <string name="Full_name">Full Name</string>
    <string name="Distance">Distance</string>
    <string name="Address">Address</string>
    <string name="Rating">Rating</string>
    <string name="eugenegitonga">eugeneGitonga</string>
    <string name="eugenegitonga31_gmail_com">eugenegitonga31@gmail.com</string>
    <string name="Enter_passkey">Enter Passkey</string>
    <string name="hospital_button">Hospital button</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="my_booking">My Booking</string>
    <string name="no_past_bookings">NO PAST BOOKINGS</string>
    <string name="patrick_khisa_n2_wheeler">Patrick Khisa\n2 Wheeler</string>
    <string name="reject1">REJECT</string>
    <string name="accept1">ACCEPT</string>
    <string name="kevin_otieno_n4_wheeler">Kevin Otieno\n4 Wheeler</string>
    <string name="reject2">REJECT</string>
    <string name="accept2">ACCEPT</string>
    <string name="eugene_gitonga_n4_wheeler">Eugene Gitonga\n4 Wheeler</string>
    <string name="accept3">ACCEPT</string>
    <string name="reject3">REJECT</string>
    <string name="riverroad_mechanic">RIVERROAD MECHANIC</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="_254704374629">+254704374629</string>
    <string name="problem">Problem</string>
    <string name="additional_information">Additional information</string>
    <string name="additional_info">Additional Info</string>
    <string name="phone">phone</string>
    <string name="star_motors">Star Motors</string>
    <string name="engine_failure">Engine Failure</string>
    <string name="_4_march">4 March</string>
    <string name="moses_muriuki">Moses Muriuki</string>
    <string name="meru">Meru</string>
    <string name="nearby_police_stations">Nearby Police Stations</string>
    <string name="_1_year_0">1 Year</string>
    <string name="_4_wheeler_">4 Wheeler</string>
    <string name="plan_b_ksh_1000_full_coverage">Plan B- KSH 1000 Full Coverage</string>
    <string name="_1_year_1">1 Year</string>
    <string name="_4_wheeler">4 Wheeler</string>
    <string name="plan_a_ksh_2000_full_coverage">Plan A- KSH 2000 Full Coverage</string>
    <string name="_2_years">2 Years</string>
    <string name="available_packages">AVAILABLE PACKAGES</string>
    <string name="plan_c_ksh_500_full_coverage">Plan C- KSH 500 Full Coverage</string>
    <string name="_2_wheeler">2 Wheeler</string>
    <string name="_0704374629">0704374629</string>
    <string name="_1_year">1 year</string>
</resources>
