<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="140dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_motors"
                android:id="@+id/book_name"
                android:layout_marginTop="7dp"
                android:textStyle="bold"
                android:textColor="#ed1717"
                android:textSize="22sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engine_failure"
                android:id="@+id/book_prob"
                android:layout_marginTop="7dp"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/book_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:gravity="end"
                android:text="@string/_4_march"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
