<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="7dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Police.Form_Filling">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/additional_information"
        android:text="@string/additional_info"
        android:textColor="#f44542"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/form_name"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="108dp"
        android:hint="@string/additional_information"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/form_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="188dp"
        android:autofillHints="@string/phone"
        android:inputType="text"
        android:padding="5dp"
        android:text="@string/_0704374629"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextFields" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="252dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/form_prob"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginTop="336dp"
        android:autofillHints=""
        android:background="#dbcece"
        android:hint="@string/problem"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_form"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#ef2f2f"
        fancy:fb_focusColor="#ef2f2f"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="5dp"
        fancy:fb_text="SUBMIT"
        fancy:fb_textColor="#FFFFFF" />

</android.support.constraint.ConstraintLayout>