<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Police.Police_Details">

    <fragment
        android:id="@+id/map3"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/det_dist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="264dp"
        android:gravity="center"
        android:text="@string/Distance"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map3" />

    <TextView
        android:id="@+id/det_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:gravity="center"
        android:text="@string/Address"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map3" />

    <TextView
        android:id="@+id/det_rate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="416dp"
        android:gravity="center"
        android:text="@string/Rating"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map3" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/call_pol"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#ea2020"
        fancy:fb_focusColor="#ea2020"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="5dp"
        fancy:fb_text="CALL ME"
        fancy:fb_textColor="#FFFFFF" />
</android.support.constraint.ConstraintLayout>