<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".Police.Admin_Booking">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/riverroad_mechanic"
        android:textColor="#4298f4"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="12dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:text="@string/eugene_gitonga_n4_wheeler"
                android:textColor="#4298f4"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/acc1"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="Accept" />

            <Button
                android:id="@+id/rej1"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="Reject" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="12dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:text="@string/kevin_otieno_n4_wheeler"
                android:textColor="#4298f4"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/acc2"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:text="Accept" />

            <Button
                android:id="@+id/rej2"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="Reject" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="12dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:text="@string/patrick_khisa_n2_wheeler"
                android:textColor="#4298f4"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/acc3"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="Accept" />

            <Button
                android:id="@+id/rej3"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="Reject" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>